--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -28,11 +28,31 @@ input[type=email], input[type=password]{
     padding: 0px 0px;
 }
 
-.submitBtn:hover, .navBtn:hover{
+.redBtn{
+    background-color: #ca4129;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+}
+
+.blueBtn{
+    background-color: #297cca;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+    width: 30%;
+    margin: 10px 0px 10px 0px;
+}
+
+input[type='button']:hover{
     opacity: 1.0;
 }
 
-.submitBtn:active, .navBtn:active{
+input[type='button']:active{
     translate: 1px 1px;
 }
 
@@ -48,7 +68,78 @@ p{
     min-height: 2em;
 }
 
+table tr:nth-child(even){
+    background-color: #eee;
+}
+
+table tr:nth-child(odd){
+    background-color: #fff;
+}
+
+td .redBtn{
+    margin: 5px 0px 5px 50px;
+}
+
 th, td{
-    padding: 10px 50px 0px 0px;
+    padding: 5px 50px 5px 0px;
     text-align: left;
+}
+
+                                    /* GROUP CSS */
+.addStuBtn{
+    background-color: #ca4129;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+}
+
+.rmvStuBtn{
+    background-color: #297cca;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+}
+
+.mainGrpBtn{
+    background-color: #297cca;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+    width: 30%;
+    margin: 10px 0px 10px 0px;
+}
+
+.crtGrpBtn{
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    height: 30px;
+    width: 10%;
+    margin: 10px 0px 10px 0px;
+}
+
+.grpNameTF{
+    height: 24px;
+    width: 10%;
+    margin: 10px 0px 10px 0px;
+}
+
+.grpUrlBtn{
+    background-color: transparent;
+    border: transparent;
+    cursor: pointer;
+    color: rgb(25, 161, 179);
+    font-size: 16px;
+}
+
+.grpUrlBtn:hover{
+    color: rgb(20, 127, 141);
 }
